--- a/countdownTimer/style.css
+++ b/countdownTimer/style.css
@@ -71,11 +71,30 @@ body{
     padding-top:13px;
     border-radius:15px;}
 
-@media screen and (max-width:950px){
-    .time-unit:nth-child(4), .time-unit:nth-child(5), .time-unit:nth-child(6){
-        
-    }
+.shake{
+    animation: shake 0.2s;
+    animation-iteration-count: 1;
+}
 
+@keyframes shake{
+    0%{transform:translateY(3px)}
+    10%{transform:translateY(4px)}
+    20%{transform:translateY(5px)}
+    30%{transform:translateY(7px)}
+    40%{transform:translateY(10px)}
+    50%{transform:translateY(15px)}
+    60%{transform:translateY(10px)}
+    70%{transform:translateY(7px)}
+    80%{transform:translateY(5px)}
+    90%{transform:translateY(4px)}
+    100%{transform:translateY(3px)}
+}
+
+@media screen and (min-width:951px){
+    .break{display: none;}
+}
+
+@media screen and (max-width:950px){
     #countdown-div h1{
         font-size:65px;
     }
