--- a/Tic Tac Toe/style.css
+++ b/Tic Tac Toe/style.css
@@ -1,12 +1,18 @@
+body{
+    font-family:'Dosis';
+    background-color:rgb(98, 96, 190);
+}
+
 #board{
-    max-width:640px; min-width:320px;
-    margin:auto;
+    text-align:center;
+    position:relative;
+
 }
 
 .square{
     background-color:rgb(238, 163, 125);
-    border:2px solid black;
-    width:185px; height: 185px;
+    border:none;
+    width:200px; height: 200px;
     outline:none; /*Removes blue line from clicking our squares*/
     font-size:60px;
     transition:0.15s ease-out;
@@ -15,6 +21,10 @@
 .square:hover{
     background-color:rgb(192, 28, 28);
     transition:0.3s ease-out;
+}
+
+.square:disabled{
+    color:black;
 }
 
 #A1:hover{border-top-left-radius: 100px;}
@@ -29,5 +39,21 @@
 #message{
     text-align:center;
     font-size:40px;
-    color:green;
+    color:white;
+    margin-bottom:20px;
+}
+
+.winning-square{background-color:green;}
+.winning-square:hover{background-color:rgb(29, 38, 26);}
+
+@media screen and (max-width:670px){
+    .square{
+        width: 150px; height: 150px;
+    }
+}
+
+@media screen and (max-width:474px){
+    .square{
+        width: 115px; height: 115px;
+    }
 }
