--- a/Tic Tac Toe/style.css
+++ b/Tic Tac Toe/style.css
@@ -1,12 +1,61 @@
 body{
     font-family:'Dosis';
     background-color:rgb(98, 96, 190);
+    margin:0; padding:0;
+}
+
+#overlay{
+    position:absolute;
+    top:0;
+    width:100%;
+    height:100vh;
+    background: rgb(0,0,0);
+    z-index:1;
+    opacity:0.8;}
+
+.fade-out{
+    animation:fadeout 1s;
+    animation-iteration-count: 1;
+}
+
+@keyframes fadeout{
+    from{opacity:0.8;}
+    to{opacity:0;}
+}
+
+#option-container{
+    position:absolute;
+    top:35vh;
+    width:100%;
+    z-index:2;
+    text-align:center;
+}
+
+#option-container h1{
+    color:white;
+    font-size:40px;
+}
+
+#option-container button{
+    display:inline-flex;
+    font-family:'Dosis';
+    font-size:25pt;
+    border:0;
+    background:white;
+    margin:0 10px;
+    padding:5px 15px;
+    transition:0.15s ease-out;
+}
+
+#option-container button:hover{
+    border-radius:20px;
+    background:#ccc;
+    transition:0.3s ease-out;
 }
 
 #board{
     text-align:center;
     position:relative;
-
 }
 
 .square{
@@ -59,7 +108,7 @@ body{
     font-size:40px;
     font-weight:800;
     color:white;
-    margin-bottom:20px;
+    margin:10px 0 20px;
 }
 
 .winning-square{background-color:green;}
