--- a/Tic Tac Toe/style.css
+++ b/Tic Tac Toe/style.css
@@ -111,6 +111,20 @@ body{
     margin:10px 0 20px;
 }
 
+#score-board{
+    background-color:chartreuse;
+    width:20%;
+    position:absolute;
+    top:0;
+    border-radius:25px;
+}
+
+.score{
+    padding:10px 0;
+    font-size:22pt;
+    text-align:center;
+}
+
 .winning-square{background-color:green;}
 .winning-square:hover{background-color:rgb(29, 38, 26);}
 
