--- a/Blackjack/main.css
+++ b/Blackjack/main.css
@@ -3,5 +3,6 @@
     border:5px solid #dcdcdc;
     border-radius: 0 0 20px 20px;
     padding:30px 0;
-    margin-top:50px;
+    margin:50px auto auto;
+    max-width:800px;
 }
