--- a/Blackjack/main.css
+++ b/Blackjack/main.css
@@ -6,3 +6,12 @@
     margin:50px auto auto;
     max-width:800px;
 }
+
+.card{
+    width: 100px;
+    padding: 10px;
+    background: white;
+    display:inline-block;
+}
+
+.card img{width:100%;}
