--- a/Blackjack/main.css
+++ b/Blackjack/main.css
@@ -1,5 +1,5 @@
 .table{
-    background-color:green;
+    background-color:rgb(57, 110, 57);
     border:5px solid #dcdcdc;
     border-radius: 0 0 20px 20px;
     padding:30px 0;
@@ -7,11 +7,21 @@
     max-width:800px;
 }
 
+.player, .dealer, .buttons{
+    text-align:center;
+}
+
 .card{
     width: 100px;
+    height: 140px;
     padding: 10px;
-    background: white;
+    background: rgb(126, 67, 67);
     display:inline-block;
 }
 
-.card img{width:100%;}
+.card img{
+    display:flex;
+    align-self:center;
+    justify-self:center;
+    width:100%;
+    border-radius:5px;}
