--- a/Blackjack/main.css
+++ b/Blackjack/main.css
@@ -24,4 +24,5 @@
     align-self:center;
     justify-self:center;
     width:100%;
-    border-radius:5px;}
+    border-radius:7px;
+    box-shadow:3px 3px 3px rgb(46, 18, 18);}
