Added reset btn (No functionality yet)

--- a/Blackjack/main.css
+++ b/Blackjack/main.css
@@ -30,3 +30,9 @@
     width:100%;
     border-radius:7px;
     box-shadow:3px 3px 3px rgb(46, 18, 18);}
+
+.buttons{
+    margin-top:25px;
+}
+
+.btn{}
