--- a/Blackjack/main.css
+++ b/Blackjack/main.css
@@ -159,6 +159,10 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#16379f",endCo
 }
 
 @media screen and (max-width:450px){
+    .table{
+        width:90%;
+    }
+
     .btn{
         display:block;
         margin:10px auto;
