--- a/Blackjack/main.css
+++ b/Blackjack/main.css
@@ -61,6 +61,10 @@ body{
     text-align:center;
 }
 
+.dealer-cards .card img{
+    height: 144px;
+}
+
 .card{
     box-shadow: inset 0 3px 6px rgb(50, 61, 110);
     width: 100px;
@@ -110,7 +114,11 @@ body{
     }
 
     .card img{
-        border-radius:4px;
+        border-radius:4px;\
+    }
+
+    .dealer-cards .card img{
+        height:95px;
     }
 
     .row{
@@ -136,6 +144,10 @@ body{
     .card img{
         border-radius:0;
         height:100%;
+    }
+
+    .dealer-cards .card img{
+        height:90px;
     }
 }
 
@@ -163,6 +175,11 @@ body{
         height:10vh;
     }
 
+
+    .dealer-cards .card img{
+        height:76px;
+    }
+
     .btn{
         width:100%;
         margin:0;
@@ -181,5 +198,9 @@ body{
 
     .card{
         height:8vh;
+    }
+
+    .dealer-cards .card img{
+        height:60px;
     }
 }
